--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>React App</title>
+    <script src='https://accounts.google.com/gsi/client' async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
